<resources>
    <string name="app_name">Birthdays</string>
    <string name="dialog_add">Add New Birthday</string>
    <string name="dialog_edit">Edit Birthday</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_title">Birthday Reminder</string>
    <string name="title_activity_help">Help</string>
    <string name="action_help">Help &amp; Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="item_menu_edit">Edit</string>
    <string name="item_menu_delete">Delete</string>
    <string name="item_menu_alarm">Toggle Reminder</string>
    <string name="hint_name">Name&#8230;</string>
    <string name="button_positive">Save</string>
    <string name="button_negative">Cancel</string>
    <string name="birthday">birthday</string>
    <string name="date_is">is</string>
    <string name="date_today">today</string>
    <string name="date_tomorrow">tomorrow</string>
    <string name="date_week">next week</string>
    <string name="date_2_week">in 2 weeks</string>
    <string name="date_this">this </string>
    <string name="date_days">Days</string>
    <string name="reminder_set">set</string>
    <string name="reminder_canceled">canceled</string>
    <string name="pref_category_reminder">Reminder Settings</string>
    <string name="enabled">Yes</string>
    <string name="disabled">No</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="day0">On the day</string>
    <string name="day1">1 day before</string>
    <string name="day2">2 days before</string>
    <string name="day3">3 days before</string>
    <string name="day4">4 days before</string>
    <string name="day5">5 days before</string>
    <string name="day6">6 days before</string>
    <string name="day7">A week before</string>
    <string name="day14">2 weeks before</string>
    <string name="pref_remind_day_title">Remind me</string>
    <string name="pref_remind_day_title_dialog">Day of reminder</string>
    <string name="pref_remind_time_title">Time of reminder</string>
    <string name="pref_enable_notifications_label">Show reminders?</string>
    <string name="pref_vibrate_label">Allow vibration?</string>
    <string name="pref_sound_label">Allow sound?</string>
    <string name="pref_test_notification_summary">Show an example notification using current settings</string>
    <string name="pref_test_notification_title">Show example reminder</string>
    <string name="pref_sort_by_title">Sort birthdays</string>
    <string name="pref_sort_by_title_dialog">Sort birthdays by</string>
    <string name="help_add_title">Add Birthday</string>
    <string name="help_add_content">To add a new birthday reminder, tap the birthday cake icon. Then enter the name and date.</string>
    <string name="help_edit_title">Edit Birthday</string>
    <string name="help_edit_content">Tap the name of the birthday you would like to change. Then click the edit button.</string>
    <string name="help_delete_title">Delete Birthday</string>
    <string name="help_delete_content">Tap the birthday you would like to change from the list. Then tap delete.</string>
    <string name="help_alarm_single_title">Turn reminder off</string>
    <string name="help_alarm_single_content">Tap the alarm icon to toggle the alarm reminder.</string>
    <string name="help_alarm_all_title">Turn all reminders off</string>
    <string name="help_alarm_all_content">Open the settings menu, and tap the \'Allow reminder notifications\' option.\n\n\nFor more help, to send feedback or suggest a new feature, please send me an email at julianrosser91@gmail.com or tap the mail button!\n\n</string>
    <string name="pref_days_before_key" translatable="false">day_before_key</string>
    <string name="pref_theme_key" translatable="false">theme_key</string>
    <string name="choice_1_day" translatable="false">@string/day3</string>
    <string name="pref_time_before_key" translatable="false">time_before_key</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notification</string>
    <string name="pref_enable_notifications_true" translatable="false">@string/enabled</string>
    <string name="pref_enable_notifications_false" translatable="false">@string/disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_vibrate_key" translatable="false">enable_vibration</string>
    <string name="pref_vibrate_true" translatable="false">@string/enabled</string>
    <string name="pref_vibrate_false" translatable="false">@string/disabled</string>
    <string name="pref_vibrate_default" translatable="false">true</string>
    <string name="pref_sound_key" translatable="false">enable_sound</string>
    <string name="pref_sound_true" translatable="false">@string/enabled</string>
    <string name="pref_sound_false" translatable="false">@string/disabled</string>
    <string name="pref_sound_default" translatable="false">true</string>
    <string name="pref_test_notification_key" translatable="false">test_notification</string>
    <string name="pref_sort_by_key" translatable="false">sort_by_key</string>
    <string name="pref_time_8" translatable="false">8</string>
    <string name="pref_time_12" translatable="false">12</string>
    <string name="pref_time_17" translatable="false">17</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="pref_theme_dialog_title">Theme Colour</string>
    <string name="pref_theme_title">Choose Colour</string>
    <string name="theme0">Blue</string>
    <string name="theme1">Pink</string>
    <string name="theme2">Green</string>
    <string name="pref_category_list">Display Settings</string>
    <string name="preffered_email">Choose your preferred email app</string>
    <string name="send_email">Send Email</string>
    <string name="email_me_text">Receive help, submit feedback or suggest a new feature</string>
    <string name="reminder_for">"Reminder for "</string>
    <string name="for_next_year">" for next year"</string>
    <string name="include_year">Include year</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="privacy_policy_summary" translatable="false">Privacy Policy Summary</string>
    <string name="privacy_title_1" translatable="false">Personal Data</string>
    <string name="privacy_text_1" translatable="false">Personal information (names, contacts and birthdates) are not, and will never be shared with any 3rd parties.</string>
    <string name="privacy_title_2" translatable="false">Google Analytics</string>
    <string name="privacy_text_2" translatable="false">Anonymous cookies and usage data is used to improve the app.</string>
    <string name="privacy_title_3" translatable="false">Read Contacts Permission</string>
    <string name="privacy_text_3" translatable="false">This is only used to import contacts with birthday information, no data is saved.</string>
    <string name="privacy_title_4" translatable="false">Contacting the User</string>
    <string name="privacy_text_4" translatable="false">If you use the contact button to email me, I will be able to see your email address. I will only use it to send you a reply.</string>
    <string name="privacy_title_5" translatable="false">Push notifications</string>
    <string name="privacy_text_5" translatable="false">This Application may send reminder push notifications. They can be disabled in the settings menu if desired.</string>
    <string name="privacy_policy_full" translatable="false">Full Privacy Policy</string>
    <string name="privacy_title_6" translatable="false">Types of data collected</string>
    <string name="privacy_text_6" translatable="false">Among the types of Personal Data that this Application collects, by itself or through third parties, there are: Cookies, Usage Data and email address. The Personal Data may be freely provided by the User, or collected automatically when using this Application.\n\nAny use of Cookies - or of other tracking tools - by this Application or by the owners of third party services used by this Application, unless stated otherwise, serves to identify Users and remember their preferences, for the sole purpose of providing the service required by the User. Failure to provide certain Personal Data may make it impossible for this Application to provide its services. Users are responsible for any Personal Data of third parties obtained, published or shared through this Application and confirm that they have the third party\'s consent to provide the Data to the Owner.</string>
    <string name="privacy_title_7" translatable="false">Methods of processing</string>
    <string name="privacy_text_7" translatable="false">The Data Controller processes the Data of Users in a proper manner and shall take appropriate security measures to prevent unauthorized access, disclosure, modification, or unauthorized destruction of the Data. The Data processing is carried out using computers and/or IT enabled tools, following organizational procedures and modes strictly related to the purposes indicated. In addition to the Data Controller, in some cases, the Data may be accessible to certain types of persons in charge, involved with the operation of the site (administration, sales, marketing, legal, system administration) or external parties (such as third party technical service providers, mail carriers, hosting providers, IT companies, communications agencies) appointed, if necessary, as Data Processors by the Owner. The updated list of these parties may be requested from the Data Controller at any time.\n\nThe Data is processed at the Data Controller\'s operating offices and in any other places where the parties involved with the processing are located. For further information, please contact the Data Controller. The Data is kept for the time necessary to provide the service requested by the User, or stated by the purposes outlined in this document, and the User can always request that the Data Controller suspend or remove the data.</string>
    <string name="privacy_title_8" translatable="false">Use of collected data</string>
    <string name="privacy_text_8" translatable="false">The Data concerning the User is collected to allow the Owner to provide its services, as well as for the following purposes: Analytics and Contacting the User. The Personal Data used for each purpose is outlined in the specific sections below.\n\nGoogle Analytics is a web analysis service provided by Google Inc. (“Google”). Google utilizes the Data collected to track and examine the use of this Application, to prepare reports on its activities and share them with other Google services. Google may use the Data collected to contextualize and personalize the ads of its own advertising network.\n\nBy filling in the contact form with their Data, the User authorizes this Application to use these details to reply to requests for information, quotes or any other kind of request as indicated by the form’s header. Personal Data collected: email address.</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="no_contacts_found">No Contacts found</string>
    <string name="no_contacts_message">Please add birthday information to your contacts for them to show here.</string>
    <string name="contact_permission_denied_message">Permission needed to load contacts</string>
    <string name="contact_already_added">has already been added</string>
    <string name="not_available" translatable="false">N/A</string>
    <string name="added">added</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="error_try_again">Error, please try again &#8230;</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_title">Sign In</string>
    <string name="empty_list_title">No Birthdays</string>
</resources>