<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Reminder Settings">

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/pref_remind_day_title"
            android:entries="@array/dayRemindEntries"
            android:entryValues="@array/dayRemindValues"
            android:key="@string/pref_days_before_key"
            android:title="@string/pref_remind_day_title_dialog" />

        <ListPreference
            android:defaultValue="@string/pref_time_12"
            android:dialogTitle="@string/pref_remind_time_title"
            android:entries="@array/timeRemindEntries"
            android:entryValues="@array/timeRemindValues"
            android:key="@string/pref_time_before_key"
            android:title="@string/pref_remind_time_title_dialog" />

    </PreferenceCategory>

</PreferenceScreen>